--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/product-preview-card-component-main/index.html">Perfumeit</a>
+    <a href="./product-preview-card-component-main/index.html">Perfumeit</a>
 </body>
 </html>
